syntax = "proto3";

package pbftpb;

import "gogoproto/gogo.proto";
import "pkg/command/commandpb/command.proto";

option go_package = "github.com/ibalajiarun/go-consensus/protocols/pbft/pbftpb";

message PBFTMessage {
    oneof type {
        AgreementMessage agreement = 1;
        ViewChangeMessage view_change = 2;
        ViewChangeAckMessage view_change_ack = 3;
        NewViewMessage new_view = 4;
    }
}

message InstanceState {
    uint64 view = 1 [(gogoproto.casttype) = "View"];

    uint64 index = 2 [(gogoproto.casttype) = "Index"];

    enum Status {
        None = 0;
        PrePrepared = 1;
        Prepared = 2;
        Committed = 3;
        Executed = 4;
    }
    Status status = 3;

    commandpb.Command command = 4;
    bytes command_hash = 5;
}

message AgreementMessage {
    uint64 view = 1 [(gogoproto.casttype) = "View"];

    uint64 index = 2 [(gogoproto.casttype) = "Index"];

    enum Type {
        PrePrepare = 0;
        Prepare = 1;
        Commit = 2;
    }

    Type type = 3;

    commandpb.Command command = 4;
    bytes command_hash = 5;
}

message ViewChangeMessage {
    uint64 new_view = 1 [(gogoproto.casttype) = "View"];

    uint64 low_index = 2 [(gogoproto.casttype) = "Index"];

    uint64 high_index = 3 [(gogoproto.casttype) = "Index"];

    repeated InstanceState p_set = 4 [(gogoproto.nullable) = false];

    repeated InstanceState q_set = 5 [(gogoproto.nullable) = false];
}

message ViewChangeAckMessage {
    uint64 new_view = 1 [(gogoproto.casttype) = "View"];

    uint64 ack_for = 2 [(gogoproto.casttype) = "github.com/ibalajiarun/go-consensus/peer/peerpb.PeerID"];

    bytes digest = 3;
}

message NewViewProof {
    uint64 ack_for = 2 [(gogoproto.casttype) = "github.com/ibalajiarun/go-consensus/peer/peerpb.PeerID"];

    bytes digest = 3;
}

message NewViewMessage {
    uint64 new_view = 1 [(gogoproto.casttype) = "View"];

    repeated NewViewProof nv_proof = 2 [(gogoproto.nullable) = false];

    map<uint64, InstanceState> instances = 3 [(gogoproto.castkey) = "Index", (gogoproto.nullable) = false];
}